<package>
  <name>RoboCollector</name>
  <version>2.4.2</version>
  <description>Tele-operate robot and collect driving data by the joystick.</description>
  <maintainer email="wsustcid@mail.ustc.edu.cn">ws</maintainer>
  <license>BSD</license>
    
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>kobuki_safety_controller</run_depend>
  <run_depend>yocs_velocity_smoother</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
</package>
